Development
	Adding sr and sr@latin translations by Милош Поповић <gpopac@gmail.com>
	Minor change to initialization, make sure that window for mplayer is initialized and realized
		if it is not, sometimes xv output fails
	Hide the file details area when we go fullscreen
	Don't hang when mplayer crashes and report error
	Move File->Details into the main window
	Break out of drop callback if filename is NULL
0.6.1
	Updated Korean translation by ByeongSik Jeon
	Take off the hint on the File->Details window eventually this data should be moved to the main window
	Updated Polish and French translations, by the usual suspects
	After randomizing, select first item on the list
	When using F to go fullscreen, make sure the control bar knows to disappear
	Make C return controls panel to proper height
	Hide playlist if started with controlid
	New bitrate detector, based on mencoder
	Show current / total items in title bar when playlist has more than 1 item in it
	Memleak hunting
	Enable list reordering with single call, cool
	Rework drag and drop, when dragging and dropping to window file is played immediately,
		when dragging and dropping to playlist file is added to playlist. Playlist is never cleared.
	Implement moving media files up and down the playlist
	Allow column resize in playlist viewer
	Updated Korean translation by ByeongSik Jeon
	In playlist, set subtitles to be loaded from same directory as video file by default.
	Make control box reappear when going out of fullscreen using only keyboard
	Make control box slide away when fullscreen.
	Make "Set Subtitle" option actually work
	Couple of minor changes to the Set Subtitle code
	Updated French translation from Starcrasher
	Make the OSD level change on the fly when selecting it in the preferences page
	When selecting OSD Level, use words rather than numbers to display level
	Popup warning if we can't load the subtitle file
	Add "Edit->Set Subtitle" menu in
	Update License text on About box